--- a/src/input.css
+++ b/src/input.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 @theme {
     --font-bebas: 'Bebas Neue', sans-serif;
 }
